--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Thia Richey</title>
+	</head>
+	<body>Welcome to my personal website.</body>
+</html>
