slightly less initial

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
 	</head>
-	<body>Welcome to my personal website.</body>
+	<body>
+		<h1> THIA RICHEY </h1>
+
+		<div id="links"> <a href="about"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
+	
+		<div id="abt-blurb"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
+	</body>
 </html>
