--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 		<div id="links"> <a href="about"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
 	
-		<div id="abt-blurb"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
+		<div id="abt-blurb" class="mainpage"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
+
+		<div id="blog" class="mainpage"> this is my blog </div>
 	</body>
 </html>
