slightly less ugly

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="cssindex.css">
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
@@ -10,7 +11,7 @@
 		<h1> THIA RICHEY </h1>
 
 		<div id="links"> <a href="about"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
-	
+		<img id="me" src="me.jpg">
 		<div id="abt-blurb" class="mainpage"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
 
 		<div id="blog" class="mainpage"> this is my blog </div>
