--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="cssindex.css">
 		<meta charset="utf-8">
