--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="cssindex.css">
 		<meta charset="utf-8">
-		<title>Thia Richey</title>
+		<title>About</title>
 	</head>
 	<body>
 		<h1> THIA RICHEY </h1>
 
-		<div id="links"> <a href="about"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
+		<div id="links"> <a href="about.html"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
 		<img id="me" src="me.jpg">
-		<div id="abt-blurb" class="mainpage"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
+		<div id="abt-blurb" class="mainpage"> this is a different page </div>
 
 		<!-- <div id="blog" class="mainpage"> this is my blog </div> -->
 	</body>
