--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<title>Thia Richey</title>
 	</head>
 	<body>
-		<h1> THIA RICHEY </h1>
+		<h1> <a href="/">THIA RICHEY</a></h1>
 
-		<div id="links"> <a href="about"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
+		<div id="links"> <a href="about.html"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
 		<img id="me" src="me.jpg">
 		<div id="abt-blurb" class="mainpage"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
 
