--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		<title>About</title>
 	</head>
 	<body>
-		<h1> THIA RICHEY </h1>
+		<h1> <a href="/">THIA RICHEY</a></h1>
 
 		<div id="links"> <a href="about.html"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
 		<img id="me" src="me.jpg">
