slightly less ugly

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 
 		<div id="links"> <a href="about.html"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
 		<img id="me" src="me.jpg">
+		<div id="socialmediaicons"> <a href="https://www.linkedin.com/in/cynthia-richey-5b5206149/"> <img id="linkedin" src="linkedin.png"> </a> <a href="https://github.com/rosefinch32"> <img id="github" src="github.png"> </a> </div>
 		<div id="abt-blurb" class="mainpage"> this is a different page </div>
 
 		<!-- <div id="blog" class="mainpage"> this is my blog </div> -->
