--- a/about.html
+++ b/about.html
@@ -14,11 +14,10 @@
 		<div id="links"> <a href="about.html"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
 		<img id="me" src="me.jpg">
 		<div id="socialmediaicons"> <a href="https://www.linkedin.com/in/cynthia-richey-5b5206149/"> <img id="linkedin" src="linkedin.png"> </a> <a href="https://github.com/rosefinch32"> <img id="github" src="github.png"> </a> </div>
-		<h2>Welcome!</h2>
-		<div id="abt-long" class="mainpage"> I'm Thia. I'm studying computer science and mathematics at the University of Washington in Seattle, but I'm from Columbia, South Carolina, a city I once heard described as, "a hot concrete bowl." I'm interested in the theoretical side of computer science, although I'm not yet sure of the specifics -- some topics I'd like to explore more are cryptography, database theory, and theory of computing. I'm looking for research opportunities!
+		<h2>Hi!</h2>
+		<div id="abt-long" class="mainpage"> <p> I'm Thia. I'm studying computer science and mathematics at the University of Washington in Seattle, but I'm from Columbia, South Carolina, a city I once heard described as, "a hot concrete bowl." I'm interested in the theoretical side of computer science, although I'm not yet sure of the specifics -- some topics I'd like to explore more are database theory, cryptography, and theory of computing. I'm looking for research opportunities! </p>
 
-		Outside of school, I have a hobbyistic interests in art, music, philosophy, and film. <!-- I ran a short-lived film club -->
-
+		<p> Outside of school, I have a hobbyistic interests in art, music, and film. <a href="https://www.are.na/thia-richey/paintings-6nyf2mqvhz4">Here</a> is a collection of paintings I like. Some of my favorite musicians are Biosphere, Protomartyr, and Swans, but it's hard to pick just a few. I founded Forgotten Films @ UW, which screened a variety of East German film. I'm a cat person. </p>
 		</div>
 	</body>
 </html>
