--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 	</head>
 	<body>
 		<h1> <a href="/">THIA RICHEY</a></h1>
-		<div id="links"> <a href="about.html"> about </a> <a href="projects"> projects </a> <a href= "blog"> blog </a> </div>
+		<div id="links"> <a href="projects"> projects </a> <a href= "blog"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
 		<img id="me" src="me.jpg">
-		<div id="abt-blurb" class="mainpage"> I'm Thia Richey, and I'm a student at the University of Washington studying computer science and mathematics. Outside school, I like cooking and art. </div>
+<div id="socialmediaicons"> <a href="https://www.linkedin.com/in/cynthia-richey-5b5206149/"> <img id="linkedin" src="linkedin.png"> </a> <a href="https://github.com/rosefinch32"> <img id="github" src="github.png"> </a> </div>
+		<h2>Hi!</h2>
+		<div id="abt-long" class="mainpage"> <p> I'm Thia. I'm studying computer science and mathematics at the University of Washington in Seattle, but I'm from Columbia, South Carolina, a city I once heard described as, "a hot concrete bowl." I'm interested in the theoretical side of computer science, although I'm not yet sure of the specifics -- some topics I'd like to explore more are database theory, cryptography, and theory of computing. I'm looking for research opportunities! </p>
+
+		<p> Outside of school, I have a hobbyistic interests in art, music, and film. <a href="https://www.are.na/thia-richey/paintings-6nyf2mqvhz4">Here</a> is a collection of paintings I like. Some of my favorite musicians are Biosphere, Protomartyr, and Swans, but it's hard to pick just a few. I founded Forgotten Films @ UW, which screened a variety of East German film. I'm a cat person. </p>
 
 		<!-- <div id="blog" class="mainpage"> this is my blog </div> -->
 	</body>
