--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<h1> <a href="/">THIA RICHEY</a></h1>
-		<div id="links"> <a href="projects"> projects </a> <a href= "blog"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
+		<div id="links"> <a href="projects"> projects </a> <a href= "blog.html"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
 		<img id="me" src="me.jpg">
 <div id="socialmediaicons"> <a href="https://www.linkedin.com/in/cynthia-richey-5b5206149/"> <img id="linkedin" src="linkedin.png"> </a> <a href="https://github.com/rosefinch32"> <img id="github" src="github.png"> </a> <a href="mailto:gannet@cs.washington.edu"> <img id="gmail" src="gmail.png"> </a> </a> </div>
 		<h2>Hi!</h2>
@@ -18,7 +18,7 @@
 
 		<p> Outside of school, I have a hobbyistic interests in art, music, and film. <a href="https://www.are.na/thia-richey/paintings-6nyf2mqvhz4">Here</a> is a collection of paintings I like. Some of my favorite musicians are Biosphere, Protomartyr, and Swans, but it's hard to pick just a few. I founded Forgotten Films @ UW, which screened a variety of East German film. I'm a cat person. 
 
-		</p>
+		</p> </div>
 
 		<!-- <div id="blog" class="mainpage"> this is my blog </div> -->
 	</body>
