--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,20 @@
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="cssindex.css">
+		<link rel="stylesheet" href="cssblog.css">
+		<link rel="stylesheet" href="common.css">
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
 	</head>
 	<body>
 		<h1> <a href="/">THIA RICHEY</a></h1>
 		<div id="links"> <a href="projects"> projects </a> <a href= "blog.html"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
-		<div id="blog" class="mainpage"> this is my blog </div>
+		<div class="blog"> <div id="nyc"> 
+			<!-- <img id="header-image-nyc"> src= -->
+			<p> Nunc quis metus non mauris pretium vulputate id ut quam. Quisque ac mauris ac urna commodo sodales nec a dui. Donec sollicitudin nisi diam, id euismod metus ornare efficitur. Aenean scelerisque turpis eleifend ultrices gravida. Quisque ut pharetra erat. Mauris nulla tortor, porttitor vestibulum elit eu, varius efficitur est. Pellentesque viverra dolor nec dui congue vehicula. Donec gravida, nibh nec semper faucibus, sapien dolor semper massa, eget tristique ante libero in nunc. Quisque ultrices tortor ut mi interdum malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent dapibus diam eget ullamcorper maximus. Mauris semper orci eget diam sodales pulvinar eget quis leo. Nulla maximus justo leo, vel egestas velit luctus quis. Cras blandit enim quis odio ultrices convallis. Praesent eget elit eu ex faucibus iaculis. Proin quis fermentum eros. </p>
+
+			<p> Vivamus id eleifend magna. Vivamus feugiat dui purus, a lacinia massa tincidunt mattis. Fusce nibh metus, eleifend sed orci ut, porttitor tempus nibh. Vestibulum tempor leo ac ligula tincidunt aliquam. Donec eget justo magna. In sed gravida odio, a pretium sapien. Proin rutrum purus vel ante posuere, sit amet vestibulum lectus elementum. Morbi in finibus eros. Etiam vestibulum augue sit amet mauris cursus rhoncus. Vivamus in mi nibh. Morbi tincidunt consequat turpis sit amet dignissim. Sed commodo quam a tellus vulputate, vitae accumsan tortor fermentum. Donec quam nunc, pulvinar a nunc eget, vestibulum consequat sem. Phasellus eu interdum tortor, vel rhoncus nisl. Phasellus efficitur a magna ac semper. Mauris in placerat augue, a semper libero. </p>
+		</div> 
+		</div>
 	</body>
 </html>
