--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="cssindex.css">
+		<link rel="stylesheet" href="common.css">
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
 	</head>
