--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 		<div class="blog"> <div id="nyc"> 
 			<h2> new york city trip </h2>
 			<img id="chelsea" src="chelsea.jpeg">
-			<p> Recently, my boyfriend and I took a trip to New York City -- one which was unfortunately cut short by the escalation of the COVID-19 outbreak. Recently, my boyfriend and I took a trip to New York City -- one which was unfortunately cut short by the escalation of the COVID-19 outbreak. Things ran normally while we were there, but museums and restaurants were ordered to close not long after our return. The frenetic pace of the city stands in stark contrast to the isolation and quiet we now find ourselves in; I'm grateful to have these photos to look back on. </p> <p> <a href="nyc.html"> read more » </a> </p>
+			<p> Recently, my boyfriend and I took a trip to New York City -- one which was unfortunately cut short by the escalation of the COVID-19 outbreak. Things ran normally while we were there, but museums and restaurants were ordered to close not long after our return. The frenetic pace of the city stands in stark contrast to the isolation and quiet we now find ourselves in; I'm grateful to have these photos to look back on. </p> <p> <a href="nyc.html"> read more » </a> </p>
 		</div> 
 		</div>
 	</body>
