--- a/nyc.html
+++ b/nyc.html
@@ -18,7 +18,20 @@
 			<p> Recently, my boyfriend and I took a trip to New York City -- one which was unfortunately cut short by the escalation of the COVID-19 outbreak. Things ran normally while we were there, but museums and restaurants were ordered to close not long after our return. The frenetic pace of the city stands in stark contrast to the isolation and quiet we now find ourselves in; I'm grateful to have these photos to look back on. </p>
 
 			<p> Some observations:
-				<ul> </ul>
+				<ul> 
+					<li>
+						By coincidence, my linear algebra instructor used to live in exactly the area we were staying. He recommended a ton of great places, including Koronet Pizza, which sells unmanageably large -- but very good -- slices. Thanks Josh!
+					</li>
+					<br>
+					<li> 
+						It's true: New York bagels really <i> are </i> exceptional. The Montreal style is more popular in the Northwest, which I think is heresy. Our favorite, from Absolute Bagels, is pictured below.
+					</li>
+					<br>
+					<li> 
+						I don't think it's hyperbole to say that the museums in this city have ruined me for everywhere else, or at least set a very, very high bar. I first realized this upon seeing Christina's World, which was not included in the otherwise near-complete Wyeth retrospective that came to Seattle in 2017, hanging unceremoniously on a wall on the fifth floor. I can't imagine being able to go any time.
+					</li>
+					<br>
+				</ul>
 			</p>
 
 			<div class="image-gallery" id="nyc-gallery">
