--- a/nyc.html
+++ b/nyc.html
@@ -28,7 +28,7 @@
 					</li>
 					<br>
 					<li> 
-						I don't think it's hyperbole to say that the museums in this city have ruined me for everywhere else, or at least set a very, very high bar. I first realized this upon seeing Christina's World, which was not included in the otherwise near-complete Wyeth retrospective that came to Seattle in 2017, hanging unceremoniously on a wall on the fifth floor. I can't imagine being able to go any time.
+						I don't think it's hyperbole to say that the museums in this city have ruined me for everywhere else, or at least set a very, very high bar. I first realized this upon seeing Christina's World, which was not included in the otherwise near-complete Wyeth retrospective that came to Seattle in 2017, hanging unceremoniously on a wall on the fifth floor of MoMA. I can't imagine being able to go any time.
 					</li>
 					<br>
 				</ul>
