--- a/sandwich.html
+++ b/sandwich.html
@@ -20,7 +20,7 @@
 			<ul> 
 				<li> one or two large eggs </li>
 				<li> butter croissant, mine are from QFC</li>
-				<li> big handful of some kind of leafy green -- we had some spring mix that needed using, but arugula is my favorite</li>
+				<li> big handful of some kind of leafy green — we had some spring mix that needed using, but arugula is my favorite</li>
 				<li> goat cheese, or another spreadable cheese </li>
 				<li> pat of butter </li>
 				<li> splash of milk </li>
