--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<h1> <a href="/">THIA RICHEY</a> </h1>
-		<div id="links"> <a href="projects"> projects </a> <a href= "blog.html"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
+		<div id="links"> <a href="coursework.html"> coursework </a> <a href= "blog.html"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
 		<img id="me" src="me.jpg">
 <div id="socialmediaicons"> <a href="https://www.linkedin.com/in/cynthia-richey-5b5206149/"> <img id="linkedin" src="linkedin.png"> </a> <a href="https://github.com/rosefinch32"> <img id="github" src="github.png"> </a> <a href="mailto:gannet@cs.washington.edu"> <img id="gmail" src="gmail.png"> </a> </a> </div>
 		<h2>Hi!</h2>
