--- a/sandwich.html
+++ b/sandwich.html
@@ -27,7 +27,7 @@
 				<li> salt + pepper </li>
 			</ul>
 
-			<p> Halve your criossant crosswise and set it aside; whisk together eggs with salt, pepper, and milk. Melt butter in a pan over low-medium heat. Pour the omelette mixture into the pan at the same time you begin toasting your croissant: they should be done at about the same time. As your egg cooks, gently fold up the sides as you would a crepe, then remove from heat and set aside. Spread the goat cheese along the bottom half of the croissant. Top with egg, then greens. </p>
+			<p> Halve your criossant crosswise and set it aside; whisk together eggs with salt, pepper, and milk. Melt butter in a pan over low-medium heat. Pour the omelette mixture into the pan as you begin toasting your croissant: they should be done at about the same time. As your egg cooks, gently fold up the sides as you would a crepe, then remove from heat and set aside. Spread the goat cheese along the bottom half of the croissant. Top with egg, then greens. </p>
 
 			<p>Enjoy!</p>
 		</div>
