--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="cssindex.css">
+		<link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="common.css">
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
@@ -20,7 +20,5 @@
 		<p> Outside of school, I have a hobbyistic interests in art, music, and film. <a href="https://www.are.na/thia-richey/paintings-6nyf2mqvhz4">Here</a> is a collection of paintings I like. Some of my favorite musicians are Biosphere, Protomartyr, and Swans, but it's hard to pick just a few. I founded Forgotten Films @ UW, which screened a variety of East German film. I'm a cat person. 
 
 		</p> </div>
-
-		<!-- <div id="blog" class="mainpage"> this is my blog </div> -->
 	</body>
 </html>
