--- a/coursework.html
+++ b/coursework.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="courses.css">
 		<link rel="stylesheet" href="common.css">
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
