--- a/sandwich.html
+++ b/sandwich.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="cssblog.css">
+		<link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="common.css">
 		<meta charset="utf-8">
 		<title>Thia Richey</title>
