--- a/coursework.html
+++ b/coursework.html
@@ -33,7 +33,7 @@
 				gen st 162: secret codes &amp; online security
 				</p>
 
-				<p>in-major GPA: 3.67</p>
+				<p class="gpa"><i>in-major GPA: 3.67</i></p>
 			</p>
 
 			<h2> math </h2>
@@ -43,7 +43,7 @@
 				math 125: calculus with analytic geometry ii <br>
 				math 124: calculus with analytic geometry i
 
-				<p>in-major GPA: 3.77</p>
+				<p class="gpa"><i>in-major GPA: 3.77</i></p>
 			</p>
 
 			<h2> misc </h2>
@@ -58,7 +58,7 @@
 				<br>
 				mus 121: the orchestra <br>
 			</p>
-				<p> overall gpa: 3.6 </p>
+				<p class="gpa"><i>overall gpa: 3.6 </i></p>
 		</div>
 	</body>
 </html>
