--- a/coursework.html
+++ b/coursework.html
@@ -16,8 +16,8 @@
 		<div id="courses"> 
 			<h2> computer science (&amp; related) </h2>
 			<p> 
-				cse 351: the hardware / software interface <i> (current) </i> <br>
-				cse 311: foundations of computing i <i> (current) </i> <br>
+				cse 351: the hardware / software interface <br>
+				cse 311: foundations of computing i <br>
 				cse 373: data structures &amp; algorithms <br>
 				cse 143: computer programming ii<br>
 				cse 142: computer programming i<br>
@@ -33,7 +33,7 @@
 				gen st 162: secret codes &amp; online security
 				</p>
 
-				<p class="gpa"><i>in-major GPA: 3.67</i></p>
+				<p class="gpa"><i>in-major GPA: 3.68</i></p>
 			</p>
 
 			<h2> math </h2>
@@ -54,11 +54,12 @@
 				<br>
 				germ 195: holocaust film <br>
 				germ 285: berlin <br>
+				germ 351: vienna 1900 <br>
 				germ 295: jews &amp; german culture <br>
 				<br>
 				mus 121: the orchestra <br>
 			</p>
-				<p class="gpa"><i>overall gpa: 3.6 </i></p>
+				<p class="gpa"><i>overall gpa: 3.61 </i></p>
 		</div>
 	</body>
 </html>
