--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>Hi!</h2>
 		<div id="abt-long" class="mainpage"> <p> I'm Thia. I'm studying computer science and mathematics at the University of Washington in Seattle, but I'm from Columbia, South Carolina, a city I once heard described as, "a hot concrete bowl." I'm interested in the theoretical side of computer science, although I'm not yet sure of the specifics — some topics I'd like to explore more are database theory, cryptography, and theory of computing. I'm looking for research / internship opportunities! </p>
 
-		<p> Outside of school, I have a hobbyistic interests in art, music, and film. <a href="https://www.are.na/thia-richey/paintings-6nyf2mqvhz4">Here</a> is a collection of paintings I like. Some of my favorite musicians are Biosphere, Protomartyr, and Swans, but it's hard to pick just a few. I founded Forgotten Films @ UW, which screened a variety of East German film. I'm a cat person. 
+		<p> Outside of school, I have a hobbyistic interests in art, music, and film. I recently visited MoMA, which you can view photos of on the blogpage of this website. Some of my favorite musicians are Biosphere, Protomartyr, and Swans, but it's hard to pick just a few. I founded Forgotten Films @ UW, which screened a variety of East German film. I'm a cat person. 
 
 		</p> </div>
 	</body>
