--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<h1> <a href="/">THIA RICHEY</a> </h1>
 		<div id="links"> <a href="coursework.html"> coursework </a> <a href= "blog.html"> blog </a> <a href="https://movies.richey.info"> movies </a> <a href="https://catsofcapitolhill.com"> cats </a> </div>
-		<img id="me" src="me2.jpeg">
+		<img id="me" src="me.jpeg">
 <div id="socialmediaicons"> <a href="https://www.linkedin.com/in/cynthia-richey-5b5206149/"> <img id="linkedin" src="linkedin.png"> </a> <a href="https://github.com/rosefinch32"> <img id="github" src="github.png"> </a> <a href="mailto:gannet@cs.washington.edu"> <img id="gmail" src="gmail.png"> </a> </a> </div>
 		<h2>Hi!</h2>
 		<div id="abt-long" class="mainpage"> <p> I'm Thia. I'm studying computer science and mathematics at the University of Washington in Seattle, but I'm from Columbia, South Carolina, a city I once heard described as, "a hot concrete bowl." I'm interested in the theoretical side of computer science, although I'm not yet sure of the specifics — some topics I'd like to explore more are database theory, PL theory, and theory of computation. I'm looking for research / internship opportunities! </p>
