--- a/coursework.html
+++ b/coursework.html
@@ -17,6 +17,7 @@
 			<h2> computer science (&amp; related) </h2>
 			<p> 
 				cse 351: the hardware / software interface <br>
+				cse 312: foundations of computing ii <br>
 				cse 311: foundations of computing i <br>
 				cse 373: data structures &amp; algorithms <br>
 				cse 143: computer programming ii<br>
@@ -37,13 +38,17 @@
 			</p>
 
 			<h2> math </h2>
-			<p> math 308: matrix algebra with applications <br> 
+			<p> 
+				math 938: washington directed reading program (elliptic curves) <br>
+				math 380: mathematics of democracy <br>
+				math 308: matrix algebra with applications <br> 
 				math 307: introduction to differential equations <br>
+				math 324: advanced calculus <br>
 				math 126: calculus with analytic geometry iii <br>
 				math 125: calculus with analytic geometry ii <br>
 				math 124: calculus with analytic geometry i
 
-				<p class="gpa"><i>in-major GPA: 3.77</i></p>
+				<p class="gpa"><i>in-major GPA: 3.79</i></p>
 			</p>
 
 			<h2> misc </h2>
